# s3-2026-lectures

./: .gitignore  INSTALL.md  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/instructions/: codacy.instructions.md
.github/workflows/: deploy-docs.yml
docs/: code_of_conduct.md  index.md
docs/1.0-introduction/: INSTALL.md  main.md
docs/1.1-open-and-reproducible-science/: main.md
docs/2.1-coding-environment/: main.md
docs/2.1-coding-environment-good-practices/: 2.1.1-coding-environment-IDE.md  2.1.2-good-code-practices.md  2.1.3-project-structure-packaging.md  2.1.3-project-structure.md  index.md
docs/2.2-git-and-github/: main.md
docs/2.3-exercise-session/: main.md  synch.md
docs/3.1-debugging-and-unit-tests/: main.md
docs/3.2-integration-tests-ci-cd/: main.md
docs/4.1-profile-optimize/: main.md
docs/4.2-ai-assisted-development/: main.md
docs/5.1-containerization/: main.md
docs/5.2-security/: main.md
docs/5.3-documentation/: main.md
docs/6.1-quality-tools/: main.md
docs/6.2-publication/: main.md
docs/7.1-extra/: main.md
docs/survey/: analysis.html  analysis.py
optimization/: memory_allocation_example.ipynb  pixi.toml  profiling_example.ipynb
testing/examples/: pyproject.toml  pytest_output.txt
testing/fibonacci/: pyproject.toml
