[project]
name = "s3-2026-lectures"
version = "0.1.0"
description = "Lectures material for the S3 School 2026"
authors = [{ name = "S3 School" }]
readme = "README.md"
requires-python = ">=3.10"

[dependencies]
mkdocs="1.6.*"
mkdocs-material="9.5.*"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
s3-2026-lectures = { path = ".", editable = true }
mkdocs = "~=1.6.0"
mkdocs-material = "~=9.5.28"

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]
build = "mkdocs build"
serve = "mkdocs serve"