[project]
authors = [{name = "Maximilian Linhoff", email = "maximilian.linhoff@cta-observatory.org"}]
dependencies = []
name = "test_demo_fibonacci"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
test_demo_fibonacci = { path = ".", editable = true }


[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.test.dependencies]
pytest = "9.*"
pytest-cov = "*"

[tool.pixi.environments]
test-py314 = ["py314", "test"]


[tool.pixi.tasks]
test = {cmd = ["pytest"]}
test-314 = { depends-on = [ {task = "test", environment = "test-py314"}] }


[tool.pytest]
minversion = "9"
